--- a/style.css
+++ b/style.css
@@ -98,12 +98,14 @@ body {
   background: var(--bg-clr);
   font-family: var(--ff-main), sans-serif;
   font-size: var(--fs-para);
+  min-height: 100svh;
 }
 
 .container {
   width: 87%;
   margin-inline: auto;
-  margin: 4.375rem auto 4.375rem auto;
+  margin: 4.375rem auto 4.375rem;
+  max-width: 1110px;
 }
 
 .cards {
@@ -116,6 +118,7 @@ body {
   align-items: center;
   gap: 1rem;
   padding-top: 1.625rem;
+  font-weight: 500;
 }
 
 .image {
@@ -130,13 +133,11 @@ body {
 }
 
 .information .name {
-  font-weight: 500;
   font-size: var(--fs-para);
   line-height: 1rem;
 }
 
 .information .status {
-  font-weight: 500;
   font-size: var(--fs-para-status);
   opacity: 0.5;
 }
@@ -177,10 +178,6 @@ body {
   border-radius: 0.5rem;
 }
 
-.comment-card-3>* {
-  color: var(--font-clr-4);
-}
-
 .comment-card-4 {
   background: var(--card-clr-4);
   border-radius: 0.5rem;
@@ -191,6 +188,7 @@ body {
   border-radius: 0.5rem;
 }
 
+.comment-card-3>*,
 .comment-card-5>* {
   color: var(--font-clr-4);
 }
@@ -210,4 +208,57 @@ body {
   font-weight: 500;
 }
 
-/* change positioning on larger screen sizes of svg */
+@media (min-width:800px) {
+  body {
+    display: grid;
+    place-items: center;
+  }
+
+  .container {
+    margin: 0;
+  }
+
+  .cards {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+
+  .cards>*>* {
+    width: 75%;
+  }
+
+
+  .comment-card-1 {
+    grid-column: 1/3;
+    background-position-x: 80.5%;
+  }
+
+  .cards .comment-card-1>* {
+    width: 89%;
+  }
+
+  .comment-card-1 .topic-heading {
+    --heading-spacing-bottom: 1rem;
+  }
+
+  .comment-card-1 p:not(.name, .status) {
+    width: 100%;
+  }
+
+  .comment-card-3 {
+    grid-row: 2/3;
+  }
+
+  .comment-card-4 {
+    grid-column: 2/4;
+  }
+
+  .cards .comment-card-4>* {
+    width: 89%;
+  }
+
+  .comment-card-5 {
+    grid-row: 1/3;
+    grid-column: 4/5;
+  }
+
+}
