little tweaks to desktop design

--- a/style.css
+++ b/style.css
@@ -226,14 +226,9 @@ body {
     width: 75%;
   }
 
-
   .comment-card-1 {
     grid-column: 1/3;
     background-position-x: 80.5%;
-  }
-
-  .cards .comment-card-1>* {
-    width: 89%;
   }
 
   .comment-card-1 .topic-heading {
@@ -244,14 +239,11 @@ body {
     width: 100%;
   }
 
-  .comment-card-3 {
-    grid-row: 2/3;
-  }
-
   .comment-card-4 {
     grid-column: 2/4;
   }
 
+  .cards .comment-card-1>*,
   .cards .comment-card-4>* {
     width: 89%;
   }
